ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erp-resource
  namespace: erpnext
  annotations: 
    kubernetes.io/ingress.class: nginx
    #haproxy.org/path-rewrite: "/"

    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "erp.info.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frappe-bench-erpnext
            port:
              number: 8080
